--- a/webrtc/webrtc-cli/index.html
+++ b/webrtc/webrtc-cli/index.html
@@ -11,39 +11,38 @@
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="./stomp.js"></script>
+    <script src="./adapter.js"></script>
 </head>
 
 <body>
-    <div>
-        <div id="container" class="container">
-            <form>
-                <div class="form-group">
-                    <label for="signal" class="control-label">signal</label>
-                    <input type="text" class="form-control" id="signal">
+    <div id="container" class="container">
+        <form>
+            <div class="form-group">
+                <label for="signal" class="control-label">signal</label>
+                <input type="text" class="form-control" id="signal">
+            </div>
+            <div class="form-group">
+                <label for="fileRoot" class="control-label">file root</label>
+                <div class="input-group">
+                    <input type="text" class="form-control" id="fileRoot">
+                    <span class="input-group-btn">
+                        <button id="dirBtn" class="btn btn-default" type="button">
+                            <span class="glyphicon glyphicon-folder-open" aria-hidden="true">
+                            </span>
+                        </button>
+                    </span>
                 </div>
-                <div class="form-group">
-                    <label for="fileRoot" class="control-label">file root</label>
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="fileRoot">
-                        <span class="input-group-btn">
-                            <button id="dirBtn" class="btn btn-default" type="button">
-                                <span class="glyphicon glyphicon-folder-open" aria-hidden="true">
-                                </span>
-                            </button>
-                        </span>
-                    </div>
+            </div>
+            <div class="form-group">
+                <div class="text-center">
+                    <button id="connectBtn" class="btn btn-default" type="button">connect</button>
                 </div>
-                <div class="form-group">
-                    <div class="text-center">
-                        <button id="connectBtn" class="btn btn-default" type="button">connect</button>
-                    </div>
-                </div>
-                <!-- <div class="form-group">
-                    <label for="log" class="control-label">log</label>
-                    <textarea class="form-control" rows="5" readonly></textarea>
-                </div> -->
-            </form>
-        </div>
+            </div>
+            <!-- <div class="form-group">
+                <label for="log" class="control-label">log</label>
+                <textarea class="form-control" rows="5" readonly></textarea>
+            </div> -->
+        </form>
     </div>
     <script src="./index.js" charset="utf-8"></script>
 </body>
