--- a/webrtc/webrtc-cli/index.html
+++ b/webrtc/webrtc-cli/index.html
@@ -5,13 +5,9 @@
     <meta charset="UTF-8">
     <title>webrtc-cli</title>
     <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" /> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./styles.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-    <script src="./stomp.js"></script>
-    <script src="./adapter.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -44,6 +40,11 @@
             </div> -->
         </form>
     </div>
+    <script src="./lib/jquery-3.2.1.js"></script>
+    <script src="./lib/bootstrap.min.js"></script>
+    <script src="./lib/sockjs.min.js"></script>
+    <script src="./lib/stomp.js"></script>
+    <script src="./lib/adapter.js"></script>
     <script src="./index.js" charset="utf-8"></script>
 </body>
 
