--- a/webrtc/simple-test-page/beautiful.html
+++ b/webrtc/simple-test-page/beautiful.html
@@ -15,7 +15,7 @@
                     <h4 class="modal-title">输入提取码</h4>
                 </div>
                 <div class="modal-body" style="height: 60px;padding: 0;">
-                    <input type="text" id="tokenInput" style="width:100%; height: 100%;" autofocus />
+                    <input type="text" id="tokenInput" style="width:100%; height: 100%; font-size: 26px; text-align: center;" autofocus />
                 </div>
                 <div class="modal-footer">
                     <button id="connectBtn" class="btn btn-primary">提取</button>
